# pinn-fluid-stenosis

./: .gitignore  MATHEMATICAL_FORMULATION.tex  README.md  pyproject.toml  requirements.txt
presentation/: PINN_Fluid_Stenosis_Presentation.md  PINN_Fluid_Stenosis_Presentation.pptx
scripts/: run_inverse_stenosed_channel_pinn.py  run_inverse_stenosis.py  run_inverse_tree_stenosis.py  run_poiseuille_baseline.py  run_stenosed_channel_pinn.py  run_synthetic_stenosis.py  run_tree_stenosis.py
src/pinn_fluid/: __init__.py  inverse_stenosed_channel_pinn.py  inverse_stenosis.py  inverse_tree_stenosis.py  poiseuille.py  stenosed_channel_pinn.py  stenosis.py  tree_stenosis.py
