[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-fluid-stenosis"
version = "0.1.0"
description = "PINN-based cardiovascular hemodynamics and 2D stenosis detection experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
